2004-07-13  Eric Botcazou  <ebotcazou@libertysurf.fr>
            Lloyd Parkes  <lloyd@must-have-coffee.gen.nz>

	PR target/15186
	* config/sparc/sol2-bi.h (LINK_ARCH64_SPEC_BASE): Pass
	/usr/ucblib/sparcv9 as -R path when -compat-bsd is specified.

2004-07-13  Eric Botcazou  <ebotcazou@libertysurf.fr>
            Martin Sebor  <sebor@roguewave.com>

	PR target/12602
	* doc/invoke.texi (SPARC options): Document -threads
	and -pthreads on Solaris.

2004-07-12  Eric Botcazou  <ebotcazou@libertysurf.fr>

	* config/sparc/sol2-bi.h: Handle TARGET_CPU_ultrasparc3.
	(CPP_CPU_SPEC): Handle -mcpu=ultrasparc3.
	(ASM_CPU_SPEC): Likewise
	* config/sparc/sol2.h: Handle TARGET_CPU_ultrasparc3.
	(ASM_CPU_SPEC): Handle -mcpu=ultrasparc3.

2004-07-10  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* pa.c (output_indirect_call): Only use %r2 as the link register in
	indirect calls with the long PA 2.0 pc-relative branch.

	PR target/16459
	* pa.c (output_indirect_call): Use %r2 as the link register when
	calling $$dyncall with a pc-relative branch.

2004-07-07  Andreas Schwab  <schwab@suse.de>

	* config/ia64/ia64.md: Define new attribute "empty".
	(prologue_use, nop_x, insn_group_barrier): Set it.

	* config/ia64/ia64.c (ia64_reorg): When looking for trailing call
	skip over "empty" insns.

2004-07-04  Gerald Pfeifer  <gerald@pfeifer.com>

	* doc/contrib.texi (Contributors): Adjust link for GNU Classpath.

2004-06-30  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* pa.c (emit_move_sequence): Fix loading of non 14-bit CONST operands
	when generating PIC code.

2004-06-28  Josef Zlomek  <zlomekj@suse.cz>

	PR c/15549
	Backport from mainline
	2003-08-19  Mark Mitchell  <mark@codesourcery.com>

		PR c++/11946
		* convert.c (convert_to_integer): Use CONVERT_EXPR (instead of
		NOP_EXPR) when necessary.

2004-06-17  Ian Lance Taylor  <ian@wasabisystems.com>

	PR middle-end/16038
	Backport from mainline:
	Fri Apr  4 17:43:52 2003  Olivier Hainque <hainque@act-europe.fr>
